后台细节处理

--- a/app/admin/view/common/aside.html
+++ b/app/admin/view/common/aside.html
@@ -12,25 +12,21 @@
             <a href="javascript:;">
               <i class="iconfont">&#xe828;</i>
               <cite>语言管理</cite>
-              <i class="iconfont nav_right">&#xe697;</i></a
-            >
+              <i class="iconfont nav_right">&#xe697;</i></a>
             <ul class="sub-menu">
               <li>
-                <a
-                  onclick="xadmin.add_tab('语言列表','{:url(\'system/language/index\')}')"
-                >
+                <a onclick="xadmin.add_tab('语言列表','{:url(\'system/language/index\')}')">
                   <i class="iconfont">&#xe6a7;</i>
-                  <cite>语言列表</cite></a
-                >
+                  <cite>语言列表</cite></a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="javascript:;">
+            <!-- <a href="javascript:;">
               <i class="iconfont left-nav-li" lay-tips="系统管理">&#xe726;</i>
               <cite>管理员</cite>
               <i class="iconfont nav_right">&#xe697;</i>
-            </a>
+            </a> -->
             <!--<ul class="sub-menu">
                             <li>
                                 <a onclick="xadmin.add_tab('管理员列表','{:url(\'user_list\')}')">
@@ -57,17 +53,13 @@
             </a>
             <ul class="sub-menu">
               <li>
-                <a
-                  onclick="xadmin.add_tab('基本设置','{:url(\'system/setting\')}')"
-                >
+                <a onclick="xadmin.add_tab('基本设置','{:url(\'system/setting\')}')">
                   <i class="iconfont">&#xe6a7;</i>
                   <cite>基本设置</cite>
                 </a>
               </li>
               <li>
-                <a
-                  onclick="xadmin.add_tab('关于我们','{:url(\'system/about/index\')}')"
-                >
+                <a onclick="xadmin.add_tab('关于我们','{:url(\'system/about/index\')}')">
                   <i class="iconfont">&#xe6a7;</i>
                   <cite>关于我们</cite>
                 </a>
@@ -84,12 +76,9 @@
         </a>
         <ul class="sub-menu">
           <li>
-            <a
-              onclick="xadmin.add_tab('产品分类','{:url(\'category/product/index\')}')"
-            >
+            <a onclick="xadmin.add_tab('产品分类','{:url(\'category/product/index\')}')">
               <i class="iconfont">&#xe6a7;</i>
-              <cite>产品分类</cite></a
-            >
+              <cite>产品分类</cite></a>
           </li>
         </ul>
       </li>
@@ -101,9 +90,7 @@
         </a>
         <ul class="sub-menu">
           <li>
-            <a
-              onclick="xadmin.add_tab('图片资源','{:url(\'media/image/list\',[\'path\'=>\'images\/\'])}')"
-            >
+            <a onclick="xadmin.add_tab('图片资源','{:url(\'media/image/list\',[\'path\'=>\'images\/\'])}')">
               <i class="iconfont">&#xe6a7;</i><cite>图片管理</cite>
             </a>
           </li>
@@ -117,61 +104,42 @@
         </a>
         <ul class="sub-menu">
           <li>
-            <a
-              onclick="xadmin.add_tab('通知管理','{:url(\'content/notice\')}')"
-            >
+            <a onclick="xadmin.add_tab('通知管理','{:url(\'content/notice\')}')">
               <i class="iconfont">&#xe6a7;</i>
-              <cite>通知管理</cite></a
-            >
+              <cite>通知管理</cite></a>
           </li>
           <li>
             <a href="javascript:;">
               <i class="iconfont left-nav-li" lay-tips="推荐管理">&#xe699;</i>
               <cite>推荐管理</cite>
-              <i class="iconfont nav_right">&#xe697;</i></a
-            >
+              <i class="iconfont nav_right">&#xe697;</i></a>
             <ul class="sub-menu">
               <li>
-                <a
-                  onclick="xadmin.add_tab('幻灯片(活动/新品)','{:url(\'content/prettiest/index\',[\'type\'=>1])}')"
-                >
+                <a onclick="xadmin.add_tab('幻灯片(活动/新品)','{:url(\'content/prettiest/index\',[\'type\'=>1])}')">
                   <i class="iconfont">&#xe6a7;</i>
-                  <cite>幻灯片(活动/新品)</cite></a
-                >
+                  <cite>幻灯片(活动/新品)</cite></a>
               </li>
               <li>
-                <a
-                  onclick="xadmin.add_tab('热门(实力担当)','{:url(\'content/prettiest/index\',[\'type\'=>2])}')"
-                >
+                <a onclick="xadmin.add_tab('热门(实力担当)','{:url(\'content/prettiest/index\',[\'type\'=>2])}')">
                   <i class="iconfont">&#xe6a7;</i>
-                  <cite>热门(实力担当)</cite></a
-                >
+                  <cite>热门(实力担当)</cite></a>
               </li>
               <li>
-                <a
-                  onclick="xadmin.add_tab('重金打造(镇馆之宝)','{:url(\'content/prettiest/index\',[\'type\'=>3])}')"
-                >
+                <a onclick="xadmin.add_tab('重金打造(镇馆之宝)','{:url(\'content/prettiest/index\',[\'type\'=>3])}')">
                   <i class="iconfont">&#xe6a7;</i>
-                  <cite>重金(镇馆之宝)</cite></a
-                >
+                  <cite>重金(镇馆之宝)</cite></a>
               </li>
               <li>
-                <a
-                  onclick="xadmin.add_tab('霸屏横幅(实力推荐)','{:url(\'content/prettiest/index\',[\'type\'=>4])}')"
-                >
+                <a onclick="xadmin.add_tab('霸屏横幅(实力推荐)','{:url(\'content/prettiest/index\',[\'type\'=>4])}')">
                   <i class="iconfont">&#xe6a7;</i>
-                  <cite>霸屏横幅(实力推荐)</cite></a
-                >
+                  <cite>霸屏横幅(实力推荐)</cite></a>
               </li>
             </ul>
           </li>
           <li>
-            <a
-              onclick="xadmin.add_tab('产品管理','{:url(\'content/product/index\')}')"
-            >
+            <a onclick="xadmin.add_tab('产品管理','{:url(\'content/product/index\')}')">
               <i class="iconfont">&#xe6a7;</i>
-              <cite>产品管理</cite></a
-            >
+              <cite>产品管理</cite></a>
           </li>
         </ul>
       </li>
