--- a/app/admin/view/common/header.html
+++ b/app/admin/view/common/header.html
@@ -33,7 +33,7 @@
       <a href="/">{$adminUser.title}:{$adminUser.username}</a>
     </li>
     <li class="layui-nav-item to-index">
-      <a href="//dev.minthouz.com" target="_index">前台首页</a>
+      <a href="//www.minthouz.com" target="_index">前台首页</a>
     </li>
     <li class="layui-nav-item">
       <a href="{:url('user/logout')}">退出登录</a>
