--- a/app/admin/view/user/user/login.html
+++ b/app/admin/view/user/user/login.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html class="x-admin-sm">
+
 <head>
     <meta charset="UTF-8">
     <title>内容系统-管理登录</title>
     <meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8"/>
-    <meta http-equiv="Cache-Control" content="no-siteapp"/>
+    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8" />
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
     <link rel="stylesheet" href="{{admin}}/css/font.css">
     <link rel="stylesheet" href="{{admin}}/css/login.css">
     <link rel="stylesheet" href="{{admin}}/css/xadmin.css">
@@ -17,67 +18,69 @@
     <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
+
 <body class="login-bg">
 
-<div class="login layui-anim layui-anim-up">
-    <div class="message">内容系统-管理登录</div>
-    <div id="darkbannerwrap"></div>
+    <div class="login layui-anim layui-anim-up">
+        <div class="message">内容系统-管理登录</div>
+        <div id="darkbannerwrap"></div>
 
-    <form method="post" class="layui-form">
-        <input name="username" placeholder="用户名" type="text" lay-verify="required" class="layui-input">
-        <hr class="hr15">
-        <input name="password" lay-verify="required" placeholder="密码" type="password" class="layui-input">
-        <hr class="hr15">
-        <div class="">
-            <select name="language" lay-verify="">
-                <option value="1">英语</option>
-                <option value="2" >简体中文</option>
-            </select>
-        </div>
-        <hr class="hr15">
-        <div class="layui-inline">
-            <div class="layui-input-inline" style="width: 135px;">
-                <input type="text" name="captcha" autocomplete="off" class="layui-input" placeholder="验证码" >
+        <form method="post" class="layui-form">
+            <input name="username" placeholder="用户名" type="text" lay-verify="required" class="layui-input">
+            <hr class="hr15">
+            <input name="password" lay-verify="required" placeholder="密码" type="password" class="layui-input">
+            <hr class="hr15">
+            <div class="">
+                <select name="language" lay-verify="">
+                    <option value="1">英语</option>
+                    <!-- <option value="2" >简体中文</option> -->
+                </select>
             </div>
-            <div class="layui-input-inline">
-                <img src="{:captcha_src()}" alt="captcha" style="height: 50px;margin-left: 10px">
+            <hr class="hr15">
+            <div class="layui-inline">
+                <div class="layui-input-inline" style="width: 135px;">
+                    <input type="text" name="captcha" autocomplete="off" class="layui-input" placeholder="验证码">
+                </div>
+                <div class="layui-input-inline">
+                    <img src="{:captcha_src()}" alt="captcha" style="height: 50px;margin-left: 10px">
+                </div>
             </div>
-        </div>
 
 
-        <hr class="hr15">
-        <input value="登录" lay-submit lay-filter="login" style="width:100%;" type="submit">
-        <hr class="hr15">
-    </form>
-</div>
+            <hr class="hr15">
+            <input value="登录" lay-submit lay-filter="login" style="width:100%;" type="submit">
+            <hr class="hr15">
+        </form>
+    </div>
 
-<script>
-    $(function () {
-        layui.use('form', function () {
-            const form = layui.form;
-            //监听提交
-            form.on('submit(login)', function (data) {
-                $.ajax({
-                    url: "{:url('user/login')}",
-                    type: 'POST',
-                    data: data.field,
-                    'success': function (result) {
-                        if (result.status === 1) {
-                            layer.msg(result.message, {'icon': 1, 'time': 600}, function () {
-                                window.parent.location.href = result.result['next']
-                            });
-                        }else{
-                            layer.msg(result.message,{'icon':5,'time':1000});
+    <script>
+        $(function () {
+            layui.use('form', function () {
+                const form = layui.form;
+                //监听提交
+                form.on('submit(login)', function (data) {
+                    $.ajax({
+                        url: "{:url('user/login')}",
+                        type: 'POST',
+                        data: data.field,
+                        'success': function (result) {
+                            if (result.status === 1) {
+                                layer.msg(result.message, { 'icon': 1, 'time': 600 }, function () {
+                                    window.parent.location.href = result.result['next']
+                                });
+                            } else {
+                                layer.msg(result.message, { 'icon': 5, 'time': 1000 });
+                            }
                         }
-                    }
-                }, 'JSON');
-                return false;
+                    }, 'JSON');
+                    return false;
+                });
             });
-        });
-    })
-</script>
-<!-- 底部结束 -->
-<script>
-</script>
+        })
+    </script>
+    <!-- 底部结束 -->
+    <script>
+    </script>
 </body>
+
 </html>
