pc产品详情调整为全屏

--- a/public/static/frontend/desktop/css/page/Product-detail.less
+++ b/public/static/frontend/desktop/css/page/Product-detail.less
@@ -107,6 +107,7 @@
         .des-box p {
             margin-top: 5px;
             font-size: 14px;
+            line-height: 18px;
         }
     }
     @media screen and (min-width: 992px) and (max-width: 1199px) {
