--- a/public/static/frontend/desktop/css/page/Product-detail.css
+++ b/public/static/frontend/desktop/css/page/Product-detail.css
@@ -117,6 +117,7 @@
   .product-Detail .des-box p {
     margin-top: 5px;
     font-size: 14px;
+    line-height: 18px;
   }
 }
 @media screen and (min-width: 992px) and (max-width: 1199px) {
